- Schedule bound threads even if CPU is offline.  Might be revisited later,   when decision what to do with already bound threads will be made. - Do not allow to assign offline CPU to the processor-set.

Quick fix for PR/39349.