sys/kern/kern_runq.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: kern_runq.c,v 1.20 2008/07/14 01:18:10 rmind Exp $	*/
+/*	$NetBSD: kern_runq.c,v 1.21 2008/09/30 16:28:45 rmind Exp $	*/
 
 /*
  * Copyright (c) 2007, 2008 Mindaugas Rasiukevicius <rmind at NetBSD org>
@@ -27,7 +27,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: kern_runq.c,v 1.20 2008/07/14 01:18:10 rmind Exp $");
+__KERNEL_RCSID(0, "$NetBSD: kern_runq.c,v 1.21 2008/09/30 16:28:45 rmind Exp $");
 
 #include <sys/param.h>
 #include <sys/kernel.h>
@@ -701,11 +701,13 @@ sched_nextlwp(void)
 
 #ifdef MULTIPROCESSOR
 	/* If runqueue is empty, try to catch some thread from other CPU */
-	if (__predict_false(spc->spc_flags & SPCF_OFFLINE)) {
-		if ((ci_rq->r_count - ci_rq->r_mcount) == 0)
-			return NULL;
-	} else if (ci_rq->r_count == 0) {
+	if (__predict_false(ci_rq->r_count == 0)) {
 		struct cpu_info *cci;
+
+		/* Offline CPUs should not perform this, however */
+		if (__predict_false(spc->spc_flags & SPCF_OFFLINE))
+			return NULL;
+
 		/* Reset the counter, and call the balancer */
 		ci_rq->r_avgcount = 0;
 		sched_balance(ci);
@@ -715,7 +717,7 @@ sched_nextlwp(void)
 		return sched_catchlwp(cci);
 	}
 #else
-	if (ci_rq->r_count == 0)
+	if (__predict_false(ci_rq->r_count == 0))
 		return NULL;
 #endif
 
@@ -751,10 +753,7 @@ sched_curcpu_runnable_p(void)
 	}
 #endif
 
-	if (__predict_false(spc->spc_flags & SPCF_OFFLINE))
-		rv = (ci_rq->r_count - ci_rq->r_mcount);
-	else
-		rv = ci_rq->r_count != 0;
+	rv = (ci_rq->r_count != 0) ? true : false;
 	kpreempt_enable();
 
 	return rv;
